--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,17 @@ project(MyProject)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+# FetchContent for argparse
+include(FetchContent)
+
+FetchContent_Declare(
+    argparse
+    GIT_REPOSITORY https://github.com/p-ranav/argparse.git
+    GIT_TAG v2.9  # Replace with the desired version or branch
+)
+
+FetchContent_MakeAvailable(argparse)
+
 # Include directories
 include_directories(include)
 include_directories(interfaces)
@@ -14,6 +25,8 @@ add_library(MyLibrary src/exs.cpp)
 
 # Add executable
 add_executable(serial_example src/main.cpp)
+message(STATUS "argparse_SOURCE_DIR: ${argparse_SOURCE_DIR}")
+target_include_directories(serial_example PRIVATE ${argparse_SOURCE_DIR}/include/argparse)
 
 # Find and link LibSerial
 find_library(LibSerial_LIB serial REQUIRED)
