--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,8 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "csignal": "cpp",
+        "charconv": "cpp"
     }
 }
