--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,3 +18,12 @@ target_link_libraries(UnitTests MyLibrary gtest gmock gtest_main gmock_main)
 # Add test cases to CTest
 include(GoogleTest)
 gtest_discover_tests(UnitTests)
+
+# Define the source and destination of the test  directories
+set(TESTS_SOURCE_DIR "${CMAKE_SOURCE_DIR}/tests/test_data")
+set(TESTS_BUILD_DIR "${CMAKE_BINARY_DIR}/tests")
+
+# Copy test data files to the build directory
+file(COPY ${TESTS_SOURCE_DIR}/dummy.txt DESTINATION ${TESTS_BUILD_DIR})
+file(COPY ${TESTS_SOURCE_DIR}/small.txt DESTINATION ${TESTS_BUILD_DIR})
+file(COPY ${TESTS_SOURCE_DIR}/big.txt DESTINATION ${TESTS_BUILD_DIR})
